--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "barryvdh/laravel-ide-helper": "^2.2",
         "nesbot/carbon": "^1.21",
-        "oriceon/oauth-5-laravel": "dev-master"
+        "google/apiclient": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
